--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-02 07:58:17
+lastsearch = 2024-08-02 11:47:12
 
 [dongagroup.vn]
 match = -272.7%%
 title = Hơn 26 mẫu giường ngủ 2m giá rẻ | giao hàng tận nhà
-url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html
+url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html?srsltid=AfmBOopveNIMOWk7DC2LRqca-rL4ibNribwso22gQ7Spyxgmxg_GDSpP
 
 [phana.com.vn]
 match = -63.6%%
@@ -19,7 +19,7 @@ url = https://phana.com.vn/giuong-y-te-2-tay-quay-zk26-1
 [noithatduongdong.com]
 match = 45.5%%
 title = Giường tầng sắt
-url = https://noithatduongdong.com/giuong-tang-sat
+url = https://noithatduongdong.com/giuong-tang-sat?srsltid=AfmBOopZSLnfIlnOU4HrXWM1mJrcbWQdykgDq-oJND2PF2BJdYfDG4CI
 
 [giuonggaphoaphat.com]
 match = -81.8%%
