--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-02 10:53:32
+lastsearch = 2024-08-02 11:38:54
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ6BvzF20&sig=ACfU3U23Sf37v0QawUpEIMj7IQ9IO0sgXg&hl=en&sa=X&ved=2ahUKEwjk_56rtNWHAxWHL0QIHbGcCaQQ6AF6BAgaEAM
+match = -223.5%%
+title = Etude Music Magazine - Volume 39 - Page 718 - Google Books Result
+url = https://books.google.com/books?id=DOUxAQAAMAAJ&pg=PA718&lpg=PA718&dq=man+in+hoa+dep+16&source=bl&ots=0UxZtvd3QA&sig=ACfU3U2HrWbXan-N9IHazkAsUMg9-W7IIg&hl=en&sa=X&ved=2ahUKEwipn-68vtWHAxWUF1kFHdGuGDoQ6AF6BAgZEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -137,9 +137,9 @@ title = Cách chỉnh màn hình máy tính chuẩn trên ...
 url = https://www.thegioididong.com/hoi-dap/cach-chinh-man-hinh-may-tinh-chuan-tren-may-tinh-windows-1314884
 
 [www.elleman.vn]
-match = -58.8%%
-title = hình ảnh đẹp - ELLE MAN việt nam (16)
-url = https://www.elleman.vn/van-hoa-giai-tri/hinh-anh-dep-lan-toa-nhat-2018/attachment/hinh-anh-dep-elle-man-viet-nam-16/
+match = -11.8%%
+title = buc anh dep - elle man - 16
+url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-43-13-pm-2/
 
 [vnmedia.vn]
 match = -164.7%%
@@ -442,9 +442,9 @@ title = Greenpoint is Sizzzzzling! New Owner Opportunity! R6B
 url = https://newyork.craigslist.org/fct/reo/d/brooklyn-greenpoint-is-sizzzzzling-new/7765501596.html
 
 [eva.vn]
-match = -176.5%%
-title = Con gái "Bà nội chất chơi” thi hoa hậu, mặt hoa da phấn ...
-url = https://eva.vn/nhan-vat-dep/con-gai-ba-noi-chat-choi-thi-hoa-hau-mat-hoa-da-phan-dung-chuan-ngoc-nu-ha-thanh-c262a602163.html
+match = -152.9%%
+title = Mê mẩn những ô cửa sổ tròn nở đầy hoa của mẹ đảm Hà ...
+url = https://eva.vn/trang-tri-nha-cua/me-man-nhung-o-cua-so-tron-no-day-hoa-cua-me-dam-ha-nam-ai-cung-xuyt-xoa-dep-nhu-tranh-c270a603777.html
 
 [dienmaycholon.com]
 match = -182.4%%
@@ -577,9 +577,9 @@ title = Summer 2024: Bộ sưu tập cá nhân hóa từ lụa, hoa và sự ...
 url = https://www.vietnamplus.vn/summer-2024-bo-suu-tap-ca-nhan-hoa-tu-lua-hoa-va-su-kieu-sa-cua-phu-nu-post966256.vnp
 
 [baomoi.com]
-match = -152.9%%
-title = Mê mẩn nhan sắc người đẹp Lào sang Việt Nam thi Hoa ...
-url = https://baomoi.com/me-man-nhan-sac-nguoi-dep-lao-sang-viet-nam-thi-hoa-hau-trai-dat-c49762122.epi
+match = 41.2%%
+title = Những bông hoa đẹp
+url = https://baomoi.com/nhung-bong-hoa-dep-c49793675.epi
 
 [www.providentlawyers.com]
 match = 0.0%%
@@ -625,4 +625,9 @@ url = https://www.condocontrol.com/blog/how-to-find-hoa-rules/
 match = -135.3%%
 title = Polk County Sheriff's Office: Sheriff Grady Judd
 url = https://www.polksheriff.org/
+
+[m.afamily.vn]
+match = -188.2%%
+title = Đang làm văn tả cây hoa hồng thì giữa chừng phát hiện bị ...
+url = https://m.afamily.vn/dang-lam-van-ta-cay-hoa-hong-thi-giua-chung-phat-hien-bi-lac-de-hoc-sinh-tieu-hoc-co-man-be-lai-khong-the-tuong-tuong-noi-20240801163804627.chn
 
