--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-02 05:54:55
+lastsearch = 2024-08-02 11:44:09
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -153,8 +153,8 @@ url = https://u.gg/lol/profile/vn2/dariusmaster-vn2/overview
 
 [shopee.vn]
 match = -100.0%%
-title = adz giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=.adz
+title = aDz giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=aDz
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -167,9 +167,9 @@ title = Xây dựng Câu lạc bộ bóng đá Công an Hà Nội ngày càng ..
 url = http://bocongan.gov.vn/tin-tuc-su-kien/hoat-dong-cua-luc-luong-cong-an/tin-hoat-dong-cua-bo/xay-dung-cau-lac-bo-bong-da-cong-an-ha-noi-ngay-cang-phat-trien-chuyen-nghiep-hien-dai-d2-t35980.html
 
 [hcmyu.hpu2.edu.vn]
-match = -80.0%%
-title = Câu lạc bộ Nhà giáo trẻ tương lai
-url = https://hcmyu.hpu2.edu.vn/cau-lac-bo-nha-giao-tre-tuong-lai.html
+match = -253.3%%
+title = Câu lạc bộ Bóng đá: “Sáng lên giảng đường, chiều ra sân bóng”
+url = https://hcmyu.hpu2.edu.vn/cau-lac-bo-bong-da-sang-len-giang-duong--chieu-ra-san-bong.html
 
 [noibaiairport.vn]
 match = -106.7%%
