--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-02 11:17:24
+lastsearch = 2024-08-02 11:45:32
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -32,9 +32,9 @@ title = Nghi thức đọc tụng trên xe về chùa vào các ngày 14, 30 và
 url = https://phamthiyen.com/nghi-thuc-doc-tung-tren-xe-ve-chua-vao-cac-ngay-14-30-va-cac-ngay-ve-chua-lam-phan-su-c1687.html
 
 [langmai.org]
-match = -18.8%%
-title = Tụng 14 Giới Tiếp Hiện
-url = https://langmai.org/phat-duong/tung-gioi/tung-14-gioi-tiep-hien/
+match = -68.8%%
+title = Văn bản 14 giới Tiếp Hiện tân tu
+url = https://langmai.org/cong-tam-quan/dong-tu-tiep-hien/gioi-ban-tiep-hien-tan-tu/
 
 [phaata.com]
 match = -118.8%%
@@ -107,9 +107,9 @@ title = Tăng "vọt" nhờ thực đơn tăng chiều cao ở tuổi 14 dễ ki
 url = https://midumenaq7.com/thuc-pham-tang-chieu-cao-tuoi-14-n1734.html
 
 [www.facebook.com]
-match = -187.5%%
-title = Việc Tìm Người/ Người Tìm Việc tại San Jose và vùng bay
-url = https://www.facebook.com/groups/188379676145905/
+match = 6.2%%
+title = Người Việt Houston
+url = https://www.facebook.com/groups/NguoiVietHouston/
 
 [kenh14.vn]
 match = -193.8%%
