--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-02 11:27:55
+lastsearch = 2024-08-02 11:36:29
 
 [shopee.vn]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -33.3%%
-title = Thảm Bàn chân len mịn thấm hút tốt size 40*60cm. ĐTVM
-url = https://www.lazada.vn/products/tham-ban-chan-len-min-tham-hut-tot-size-4060cm-dtvm-i2005592715.html
+match = -83.3%%
+title = Thảm lau chùi chân chống trơn trượt sợi len siêu mịn kích ...
+url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html
 
 [megahomevietnam.com]
 match = 20.0%%
@@ -83,8 +83,8 @@ url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.h
 
 [sieuthinguyenkim.com]
 match = -62.5%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
-url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
+title = Thảm lông mềm trải chân giường, lót ghế ngồi nhiều size 40x60
+url = https://sieuthinguyenkim.com/tham-long-mem-trai-chan-giuong-nti177943446.html
 
 [huyenikea.com]
 match = -4.2%%
