--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-02 04:33:25
+lastsearch = 2024-08-02 11:46:13
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,13 +12,13 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
-match = -113.6%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+match = -68.2%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
 url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
@@ -67,8 +67,8 @@ title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
 url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [decosy.com]
-match = 4.5%%
-title = Furniture & Decoration
+match = -50.0%%
+title = Furniture & Decoration - Decosy Vietnam
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [vn.my-best.com]
@@ -133,7 +133,7 @@ url = https://www.sieuthinem.vn/nem-cao-su-5-zone-aloe-kim-cuong.html
 
 [0869125101.taphoa.so]
 match = -81.8%%
-title = Ga - Gối - Đệm Hàn Quốc EVERON . Thảm trải giường 180x200
+title = Chăn - Ga - Đệm Hàn Quốc EVERON . Thảm trải giường 180x200
 url = https://0869125101.taphoa.so/products/tham-trai-giuong-180x200-E4b8FaEqXyei7JaD9JrXQk
 
 [m.thitruongsi.com]
