--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-02 06:44:28
+lastsearch = 2024-08-02 11:47:52
 
 [www.lazada.vn]
 match = -27.8%%
@@ -375,4 +375,9 @@ url = http://weblink.ci.golden-valley.mn.us/WebLink/DocView.aspx?id=574977&page=
 match = -6.2%%
 title = Evidence for IPS
 url = https://ipsworks.org/index.php/evidence-for-ips/
+
+[changmibedding.com]
+match = -138.9%%
+title = Vỏ gối nằm - Changmi Bedding tiêu chuẩn khách sạn 5 sao
+url = https://changmibedding.com/vo-goi-nam/
 
