--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 13.8%%
-title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
+match = -17.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html?srsltid=AfmBOorlf-Hc2icIhzSJ77kEKu9s50D4fqlzbDEzsieAwW3UjsWD9OMM
 
 [nanara.vn]
 match = 34.5%%
@@ -59,7 +59,7 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-cao-su-non-2d-plush/
 [foreverbedding.net]
 match = -37.9%%
 title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOoqu5Gdhi6e2ZKF1mH-v1KMkpSS5vulTf1Ai1eyhvlQE4Fx0GDv9
 
 [russo.vn]
 match = -17.2%%
@@ -75,4 +75,9 @@ url = https://kyoryo.vn/chieu-cao-cap.html
 match = -10.3%%
 title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
 url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+
+[www.nemuytin.com]
+match = -13.8%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
+url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 
