--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-02 09:55:37
+lastsearch = 2024-08-02 11:44:29
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -22,8 +22,8 @@ title = Ga chống thấm đa năng Olympia 2 trong 1
 url = https://demxanh.com/ga-chong-tham-da-nang-olympia-2-trong-1.html
 
 [dreamland.vn]
-match = -38.7%%
-title = Chăn Tuyết Điều Hòa - Chăn ga gối đệm cao cấp Dreamland
+match = -21.1%%
+title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
