--- a/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-150x200x10-felix.html
 lastopen = 2024-06-07 00:14:57
 
 [search]
-lastsearch = 2024-08-02 10:49:01
+lastsearch = 2024-08-02 11:50:41
 
 [thefelix.vn]
 match = -50.0%%
@@ -117,8 +117,8 @@ title = NỆM CAO SU THIÊN NHIÊN UNIQUE
 url = https://nemkhuyenmai.com/nem-cao-su-thien-nhien-unique.html
 
 [nemtrungson.vn]
-match = 23.7%%
-title = Nệm Cao Su Thiên Nhiên Hoạt Tính RELAX - Nệm Trung Sơn
+match = 65.8%%
+title = Nệm Cao Su Thiên Nhiên Hoạt Tính RELAX
 url = https://nemtrungson.vn/san-pham/nem-cao-su-thien-nhien-hoat-tinh-relax/
 
 [www.sieuthinem.vn]
