--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -28,8 +28,8 @@ url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPC-21053
-url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
+title = Bộ Chăn ga gối Everon EPM-21067
+url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
 match = 33.3%%
