--- a/images/chieu-nhua-thai-binh-gt-180x300/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 lastopen = 2024-08-01 10:35:37
 
 [search]
-lastsearch = 2024-06-29 10:17:46
+lastsearch = 2024-08-02 11:46:53
 
 [www.diepxuan.com]
 match = 38.7%%
@@ -12,13 +12,13 @@ title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [shopee.vn]
-match = 29.0%%
-title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
-url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
+match = 32.3%%
+title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
 
 [m.facebook.com]
-match = 16.1%%
-title = Xưởng sản xuất chiếu nhựa Thái Bình
+match = 19.4%%
+title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
 url = https://m.facebook.com/61553157173242/
 
 [trangvangvietnam.com]
@@ -39,7 +39,7 @@ url = https://sxd.bacgiang.gov.vn/documents/21455/5519781/1550589716143_Cong bo 
 [tiki.vn]
 match = 48.4%%
 title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
-url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p169034812.html
+url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p160055664.html?spid=160055719
 
 [pdfcoffee.com]
 match = 9.7%%
@@ -72,12 +72,22 @@ title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
 url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/
 
 [shopadf.com]
-match = -58.1%%
-title = Phát triển điện gió ngoài khơi bền vững: Cần thêm nhiều giải ...
-url = http://shopadf.com/phat-trien-dien-gio-ngoai-khoi-ben-vung-can-them-nhieu-giai-phap-dong-bo-139878.html
+match = -54.8%%
+title = Bên trong nơi diễn ra sự kiện ra mắt iPhone 8 - Xu Vàng 777
+url = http://shopadf.com/ben-trong-noi-dien-ra-su-kien-ra-mat-iphone-8-67152.html
 
 [www.tles.tyc.edu.tw]
 match = -22.7%%
 title = الخارصين تعريف [jQP5Df]
 url = https://www.tles.tyc.edu.tw/instpage.php?=LoginId,LogoffReason,PunchTime&h=1200&r=0&url=https://xn----8sbema1b6ajjbl5i.xn--p1ai/7634815wwwy1ty65kmcomze5fe43y
+
+[kinhtexaydung.gov.vn]
+match = -21.1%%
+title = Cong bo gia T7-2017
+url = https://kinhtexaydung.gov.vn/wp-content/uploads/2019/04/2017-07_Cong-bo-gia-T7-2017.pdf
+
+[thuvienso.bvu.edu.vn]
+match = -18.2%%
+title = Khuon-phun-ep-nhua.pdf
+url = http://thuvienso.bvu.edu.vn/bitstream/TVDHBRVT/20754/1/Khuon-phun-ep-nhua.pdf
 
