--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-02 10:49:22
+lastsearch = 2024-08-02 12:01:51
 
 [chieutrelanlan.com]
-match = -17.9%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 180x200cm (1m8)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-mau-den-loai-khong-vien-180x200cm-26.html
+match = -7.1%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
 url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
-match = -28.6%%
-title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m2
+match = 7.1%%
+title = chiếu trúc giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [www.diepxuan.com]
 match = 28.6%%
@@ -42,9 +42,9 @@ title = Chiếu Tre Lan Lan | Ho Chi Minh City
 url = https://www.facebook.com/chieutruclanlan/
 
 [tiki.vn]
-match = 34.6%%
-title = Mua Chiếu trúc hạt Quế Lâm
-url = https://tiki.vn/chieu-truc-hat-que-lam-p87383232.html?spid=170118061/
+match = -42.9%%
+title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [www.sendo.vn]
 match = -10.7%%
