--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-02 10:01:27
+lastsearch = 2024-08-02 11:53:30
 
 [www.everonvn.vn]
 match = 66.7%%
@@ -12,14 +12,14 @@ title = Ruột gối Everon 45 x 65
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
 
 [shopee.vn]
-match = -123.8%%
-title = Ruột gối đầu 45x65 bông hạt trắng tinh khiết,gối nằm êm , ...
-url = https://shopee.vn/Ruột-gối-đầu-45x65-bông-hạt-trắng-tinh-khiết-gối-nằm-êm-mềm-cao-cấp-i.1130196769.24952921894
+match = -81.0%%
+title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
+url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
 
 [www.diepxuan.com]
-match = 42.9%%
-title = Ruột gối kê hoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
+match = 4.8%%
+title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html?srsltid=AfmBOooYlr75PuMUeYmRPnGFoPjgrcQ0sz7QjaQAvmB5fAKcA-VDcx-F
 
 [elambo.vn]
 match = -90.5%%
@@ -27,14 +27,14 @@ title = Bảng giá mẫu ruột gối 45x65 Elambo ưu đãi và tốt nhất
 url = https://elambo.vn/ruot-goi-45x65-cm/
 
 [suongtuyet.com]
-match = -33.3%%
-title = Ruột Gối Bông Thấp - Classic Everon 45 x 65 cm
-url = https://suongtuyet.com/ruot-goi-dai-everon-45-x-65-cm
+match = -38.1%%
+title = Ruột Gối Bông Dày - Standard Everon 45 x 65 cm
+url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
 
 [www.lazada.vn]
 match = -85.7%%
 title = Ruột gối đầu hoa nhí ruột gối nằm cao cấp kích thước 45x65
-url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html
+url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html?srsltid=AfmBOoprHiII93AzkGRTTtc_PF5fBI8XbF1O2iA0_SQLqDVr0BRLyYVP
 
 [demxanh.com]
 match = -81.0%%
@@ -60,4 +60,9 @@ url = https://demsonghonghanoi.com/ruot-goi-dau-song-hong-kich-thuoc-45x65cm/
 match = -23.8%%
 title = COMBO 2 RUỘT GỐI HOA HÚT CHÂN KHÔNG KT 45x65
 url = https://sieuthinguyenkim.com/combo-2-ruot-goi-hoa-hut-chan-nti112566557.html
+
+[www.everonqb.com]
+match = 19.0%%
+title = Ruột gối kê Everon 45x65 thư giãn cổ
+url = https://www.everonqb.com/ruot-goi-ke-everon-45x65-thu-gian-co.html
 
