--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-02 09:57:01
+lastsearch = 2024-08-02 11:58:02
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,14 +22,14 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -21.4%%
+title = 12.12: The Day
+url = https://en.wikipedia.org/wiki/12.12:_The_Day
 
 [www.facebook.com]
-match = -160.0%%
-title = CDT Jake Sorrels successfully defended his senior thesis “ ...
-url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
+match = -70.0%%
+title = Trenton Catholic Boys High School Friends
+url = https://www.facebook.com/groups/1002178786517553/?locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -102,9 +102,9 @@ title =
 url = https://english.moe.go.kr/sub/infoRenewal.do?m=0301&page=0301&s=english
 
 [cryptonews.com]
-match = -140.0%%
-title = Bitcoin Miner CleanSpark Expands with New Facilities in ...
-url = https://cryptonews.com/news/bitcoin-miner-cleanspark-expands-with-new-facilities-in-wyoming-and-tennessee.htm
+match = -110.0%%
+title = Escaped South Korean Criminal Suspect 'Robs OTC ...
+url = https://cryptonews.com/news/escaped-south-korean-criminal-suspect-used-weapon-to-rob-otc-crypto-buyer.htm
 
 [www.google.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -90.0%%
-title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
-url = https://en.yna.co.kr/view/AEN20130109006800325
+match = -115.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.vlr.gg]
 match = -145.0%%
