--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-02 06:19:32
+lastsearch = 2024-08-02 11:46:12
 
 [ninhouse.vn]
 match = -161.5%%
 title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi
+url = https://ninhouse.vn/collections/vo-goi?srsltid=AfmBOooeixfnN66B2Y5HGGqnuhdzZy092P3d5zxmvVKx8gcUFJe49OPl
 
 [www.lamido.vn]
 match = 46.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -107.7%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOorwkwYquPLgPp603ncsMpaCAPBsXUCXOiDmiYLKvzIFDFLWNOmR
 
 [www.reddit.com]
 match = -230.8%%
@@ -47,9 +47,9 @@ title = UltraSheer - Siêu mỏng, vớ gối, màu da, kín ngón
 url = https://shopykhoa.com/ultrasheer-sieu-mong-vo-goi-mau-da-kin-ngon-sp101.htm
 
 [tiki.vn]
-match = -253.8%%
-title = Mua (Rẻ vô địch) Vỏ gối nằm Cotton poly Mẫu Kẻ Râu Ghi ...
-url = https://tiki.vn/re-vo-dich-vo-goi-nam-cotton-poly-mau-ke-rau-ghi-duoc-lua-mau-p124455489.html
+match = -169.2%%
+title = Mua VỎ GỐI XỊN HÀNG CAO CẤP (màu kẻ ngẫu nhiên)
+url = https://tiki.vn/vo-goi-xin-hang-cao-cap-mau-ke-ngau-nhien-p134296044.html?spid=134296046
 
 [gonbedding.vn]
 match = -15.4%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -215.4%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOop7j2JqyAA8HzeyitXyzf5vaCz4rfR0SfUI5j8sgDRSTtKgkmC5
 
 [www.everonvn.vn]
 match = 15.4%%
@@ -174,5 +174,5 @@ url = https://demolympia.com/chan-ga-goi-khach-san-olympia-cotton-lua-7-mon-mau-
 [aeoneshop.com]
 match = -16.7%%
 title = Vỏ Gối
-url = https://aeoneshop.com/products/category/137/goi---vo-goi
+url = https://aeoneshop.com/products/category/137/goi---vo-goi?srsltid=AfmBOor76d9akfzHHPn49dTJu8xv6s59dI_PJcHrvAixpMpPNYiluqZW
 
