CI images update

--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-02 04:36:28
+lastsearch = 2024-08-02 12:45:07
 
 [tiki.vn]
 match = -133.3%%
@@ -19,7 +19,7 @@ url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
 [www.lazada.vn]
 match = -66.7%%
 title = Chăn Lông Cừu 2mx2m2 Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/
+url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/?srsltid=AfmBOopo0NCXoPZVckloMVVL3vrmnO1827S5h18WK7u3fRpo4855UVwu
 
 [tokyolife.vn]
 match = -193.3%%
@@ -94,7 +94,7 @@ url = https://www.dem365.vn/chan-long-cuu-gia-re/
 [demxanh.com]
 match = -73.3%%
 title = Chăn lông cừu Normal mã 12 Hoa kẻ ngang
-url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html
+url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html?srsltid=AfmBOop8IkpRhF5MZZA1E_Fx-AgUGgOLVkmjPpmsf32SB-uC_3wRiPo-
 
 [shope.io.vn]
 match = -186.7%%
@@ -159,5 +159,5 @@ url = https://audipet.com/cho-chan-cuu-duc.php
 [bibomart.com.vn]
 match = -86.7%%
 title = Chăn lông cừu 2 lớp màu đỏ mận (2m x 2.3m)
-url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html
+url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html?srsltid=AfmBOoorRO9cv9deK-5HpC-_2d3KCxH07XXNl4aEGED8BNLsiCZvTzkN
 
