--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -47,9 +47,9 @@ title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
 url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
 
 [www.thegioididong.com]
-match = -193.8%%
-title = Samsung Galaxy A14 4GB - Chính hãng, giá tốt, có trả góp
-url = https://www.thegioididong.com/dtdd/samsung-galaxy-a14-4gb
+match = -181.2%%
+title = Tổng hợp đáp án Brain Out màn 1 đến 225 (Có video ...
+url = https://www.thegioididong.com/game-app/tong-hop-dap-an-brain-out-man-101-den-150-co-video-huong-dan-1249674
 
 [saigontourist.edu.vn]
 match = -100.0%%
