--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-02 11:38:54
+lastsearch = 2024-08-02 12:42:59
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -223.5%%
-title = Etude Music Magazine - Volume 39 - Page 718 - Google Books Result
-url = https://books.google.com/books?id=DOUxAQAAMAAJ&pg=PA718&lpg=PA718&dq=man+in+hoa+dep+16&source=bl&ots=0UxZtvd3QA&sig=ACfU3U2HrWbXan-N9IHazkAsUMg9-W7IIg&hl=en&sa=X&ved=2ahUKEwipn-68vtWHAxWUF1kFHdGuGDoQ6AF6BAgZEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilnTBz_5E&sig=ACfU3U0KBveGRhf9KNLHHsXOzPopLFFt-w&hl=en&sa=X&ved=2ahUKEwj3-tbmzNWHAxUVm4kEHTVBIv4Q6AF6BAgaEAM
 
 [tax.vermont.gov]
 match = -29.4%%
