--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-02 06:54:54
+lastsearch = 2024-08-02 12:46:06
 
 [en.wikipedia.org]
 match = -15.4%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -194.1%%
-title = Non-alcoholic fatty liver disease and colorectal cancer ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6613648/
+match = -200.0%%
+title = TRPC channels: Structure, function, regulation and recent ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7183440/
 
 [books.google.com]
 match = -11.8%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -129.4%%
-title = Does KQ Entertainment treat their idols well?
-url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
+match = -188.2%%
+title = How to audition for SM, YG, JYP, Source Music, Cube and ...
+url = https://www.quora.com/How-do-I-audition-for-SM-YG-JYP-Source-Music-Cube-and-KQ-online-in-2020-Can-you-put-the-links-for-official-sites
 
 [msaniimusicgroup.org]
 match = 0.0%%
@@ -310,4 +310,9 @@ url = https://aasldpubs.onlinelibrary.wiley.com/doi/pdf/10.1002/hep.510240505
 match = -58.8%%
 title = A Survey of Large Language Models
 url = https://arxiv.org/pdf/2303.18223
+
+[demxanh.com]
+match = -141.2%%
+title = Chăn lông cừu là gì? Nên chọn loại chăn lông cừu nào?
+url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html
 
