--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-02 11:46:34
+lastsearch = 2024-08-02 12:31:48
 
 [www.gov.uk]
 match = -200.0%%
@@ -852,9 +852,9 @@ title =
 url = https://football-ranking.com/rankByConfederation?zone=AFC&period=
 
 [www.coe.edu]
-match = -233.3%%
-title = Coe College: One of the Best Small Colleges in the Country
-url = https://www.coe.edu/
+match = 0.0%%
+title = 
+url = https://www.coe.edu/why-coe/discover-coe/facts-figures
 
 [www.endocrine.org]
 match = -73.3%%
@@ -1150,4 +1150,19 @@ url = https://business.udemy.com/
 match = -40.0%%
 title = Using Dual SIM with an eSIM
 url = https://support.apple.com/en-us/109317
+
+[www.thomastonsavingsbank.com]
+match = -200.0%%
+title = Thomaston Savings Bank | CT Personal & Business Banking
+url = https://www.thomastonsavingsbank.com/
+
+[www.legis.state.pa.us]
+match = -193.3%%
+title = Members of the House - PA House of Representatives
+url = https://www.legis.state.pa.us/cfdocs/legis/home/member_information/mbrList.cfm?body=H
+
+[www.fm.bank]
+match = -120.0%%
+title = Welcome to F&M Bank | Farmers & Merchants
+url = https://www.fm.bank/
 
