--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-02 11:46:12
+lastsearch = 2024-08-02 12:54:01
 
 [ninhouse.vn]
 match = -161.5%%
 title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi?srsltid=AfmBOooeixfnN66B2Y5HGGqnuhdzZy092P3d5zxmvVKx8gcUFJe49OPl
+url = https://ninhouse.vn/collections/vo-goi
 
 [www.lamido.vn]
 match = 46.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -107.7%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOorwkwYquPLgPp603ncsMpaCAPBsXUCXOiDmiYLKvzIFDFLWNOmR
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
 
 [www.reddit.com]
 match = -230.8%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -215.4%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOop7j2JqyAA8HzeyitXyzf5vaCz4rfR0SfUI5j8sgDRSTtKgkmC5
+url = https://jysk.vn/vo-goi-trang-tri
 
 [www.everonvn.vn]
 match = 15.4%%
