--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-02 10:48:40
+lastsearch = 2024-08-02 12:56:46
 
 [shopee.vn]
 match = -32.0%%
@@ -49,7 +49,7 @@ url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 [www.lazada.vn]
 match = 4.0%%
 title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
+url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/?srsltid=AfmBOor6JUtwepNxd1d53PsLSmo9I6NnU7qPMUowtLYIPsRJaXwZcwH7
 
 [demxanh.com]
 match = 12.0%%
