CI images update

--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-02 12:45:42
+lastsearch = 2024-08-02 13:36:59
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Thảm chân len xù 1 50x80
 url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 
 [tiki.vn]
-match = -41.7%%
-title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham chui chan 60x80
+match = -37.5%%
+title = Thảm lai chân 50x80 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm lai chân 50x80
 
 [shopee.vn]
-match = -12.5%%
-title = thảm lau chân chống trơn trượt kích thước 50x80
-url = https://shopee.vn/Thảm-lau-chân-siêu-thấm-hút-nước-5s-thảm-lau-chân-chống-trơn-trượt-kích-thước-50x80-i.351179465.22661027123
+match = -66.7%%
+title = Thảm lau chân chùi chân cao cấp Soft loại đẹp 50 x 80cm ...
+url = https://shopee.vn/Thảm-lau-chân-chùi-chân-cao-cấp-Soft-loại-đẹp-50-x-80cm-tham-lau-chan-chui-chan-cao-cap-Soft-loai-dep-50x80-cm-i.243877089.8848219840
 
 [lepetit.com.vn]
 match = -79.2%%
@@ -62,9 +62,9 @@ title = Thảm chân Khách Sạn kích thước 42-45-50 cm, Trọng ...
 url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
 
 [www.lazada.vn]
-match = -20.8%%
-title = THẢM SAN HÔ NẤM CHÙI CHÂN MỀM MẠI LOẠI DÀY
-url = https://www.lazada.vn/products/tham-san-ho-nam-chui-chan-mem-mai-loai-day-to-i2480252404.html
+match = 8.3%%
+title = Thảm Chùi Chân 50x80 Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/tham-chui-chan-50x80/?page=49
 
 [h5.lazada.vn]
 match = -20.8%%
@@ -110,4 +110,14 @@ url = https://www.teamstar-praha.cz/vi/tham-milano-50x80cm/
 match = -25.0%%
 title = Tranh SM Tùng Hạc Diên Niên 50x80 MNV-TSM651-1
 url = https://myngheviet.vn/qua-tang-tranh-tung-hac-dien-nien/tranh-sm-tung-hac-dien-nien-50x80-mnv-tsm651-1-6758-myngheviet.vn/
+
+[thamnhuachuichan.com]
+match = -41.7%%
+title = Thảm chùi chân lông xù màu trắng - thamnhuachuichan
+url = https://thamnhuachuichan.com/tham-chui-chan-long-xu-mau-trang.html
+
+[thamtraisanlacviet.com]
+match = -58.3%%
+title = Thảm Chùi Chân Welcome | Thảm Nhựa Rối Welcome Giá ...
+url = https://thamtraisanlacviet.com/sptv/tham-chui-chan-welcome/
 
