--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-02 09:03:14
+lastsearch = 2024-08-02 13:30:50
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,13 +13,13 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
 match = -35.7%%
-title = Một vài tác dụng phụ của chiếu đèn vàng da sơ sinh
-url = https://www.vinmec.com/vie/bai-viet/mot-vai-tac-dung-phu-cua-chieu-den-vang-da-so-sinh-vi
+title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
+url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
 
 [www.hotdeal.vn]
-match = -25.0%%
-title = ĐIỀU TRỊ MỤN LƯNG/ THÂM NÁCH/ MÔNG/ BẸN/ LĂN ...
-url = https://www.hotdeal.vn/ho-chi-minh/dieu-tri-mun-tham-nam/dieu-tri-mun-lung-tham-nach-mong-ben-lan-kim-sieu-vi-diem-tri-seo-ro-nam-tan-nhang-phi-kim-tao-bien-cam-ket-hieu-qua-100-mimosa-spa-359573.html?srsltid=AfmBOoquM93csYS92HZ30dgiUgIN--TcA_UhrPCicfN9Z_5FJ24gsRdi
+match = -32.1%%
+title = Madina Beauty & Academy - Cấy Tảo/ Hồng Sâm/ Ủ Trắng
+url = https://www.hotdeal.vn/ho-chi-minh/cham-soc-da-mat/madina-beauty-academy-cay-tao-hong-sam-u-trang-lan-kim-363884.html
 
 [www.youtube.com]
 match = -60.7%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -7.1%%
-title = LÀNG ĂN THÔ - Fruitarian ( Raw Vegan )
-url = https://m.facebook.com/groups/langantho/posts/1353899318666407/
+match = 17.9%%
+title = Việc làm spa uy tín - Facebook
+url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
 
 [www.dkn.tv]
 match = -21.4%%
