--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-02 12:56:46
+lastsearch = 2024-08-02 13:24:40
 
 [shopee.vn]
-match = -32.0%%
-title = Mùng chụp tự bung khung gấp gọn thông minh cao cấp
-url = https://shopee.vn/Mùng-chụp-tự-bung-khung-gấp-gọn-thông-minh-cao-cấp-Màn-chụp-tự-bung-người-lớn-1m2-1m6-1m8-2m2-đỉnh-vuông-i.472489092.2973784523
+match = -12.0%%
+title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -24.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [www.mungbaobao.com]
-match = -28.0%%
-title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
-url = https://www.mungbaobao.com/
+match = -32.0%%
+title = Mùng Chụp Tự Bung Cao Cấp Giá Tốt, Xu Hướng Mới ...
+url = https://www.mungbaobao.com/mung-chup-tu-bung-cao-cap.html
 
 [tiki.vn]
 match = -28.0%%
