--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-02 12:14:30
+lastsearch = 2024-08-02 13:25:44
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -15.0%%
+title = Abraham Palmer - UCSD Profiles
+url = https://profiles.ucsd.edu/abraham.palmer
 
 [quicksearch.dla.mil]
 match = -185.7%%
