--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-02 12:47:53
+lastsearch = 2024-08-02 14:53:43
 
 [hoa18.com]
 match = -84.2%%
@@ -67,8 +67,8 @@ title = Điều Hoà Bật 16 Độ Không Mát Ở Nhật Hitachi
 url = https://www.tiktok.com/discover/điều-hoà-bật-16-độ-không-mát-ở-nhật-hitachi
 
 [xlinhho.hagiang.gov.vn]
-match = -157.9%%
-title = Những doanh nghiệp đưa cây chè Bắc Quang vượt qua đại dịch ...
+match = -110.5%%
+title = Những doanh nghiệp đưa cây chè Bắc Quang vượt qua ...
 url = https://xlinhho.hagiang.gov.vn/-/nhung-doanh-nghiep-dua-cay-che-bac-quang-vuot-qua-dai-dich-covid-19
 
 [metruyencv.com]
