--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-02 09:55:15
+lastsearch = 2024-08-02 15:00:40
 
 [demxanh.com]
 match = -60.9%%
@@ -32,9 +32,9 @@ title = Nấu Nồi Lẩu Mắm Đầu Năm Nhúng Bắp Chuối Hột Ăn Một
 url = https://www.youtube.com/watch?v=_urBtuvQ-kQ
 
 [phongkhongkhongquan.vn]
-match = -82.6%%
-title = Tiểu đoàn Căn cứ Sân bay Nà Sản khắc phục khó khăn ...
-url = https://phongkhongkhongquan.vn/28375/tieu-doan-can-cu-san-bay-na-san-khac-phuc-kho-khan-tang-gia-chan-nuoi-tot.html
+match = -78.3%%
+title = Đại đội 5 thực hiện tốt công tác tăng gia, chăn nuôi
+url = https://phongkhongkhongquan.vn/27726/dai-doi-5-thuc-hien-tot-cong-tac-tang-gia-chan-nuoi.html
 
 [tamanhhospital.vn]
 match = -39.1%%
