--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-02 14:34:52
+lastsearch = 2024-08-02 15:00:18
 
 [demxanh.com]
 match = 34.5%%
@@ -34,7 +34,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [shopee.vn]
 match = -20.7%%
 title = chiếu điều hòa cao su non tencel latex 5D mềm mịn mướt ...
-url = https://shopee.vn/chiếu-điều-hòa-cao-su-non-tencel-latex-5D-mềm-mịn-mướt-mát-size-160x200-180x200-i.1063512412.22353005341
+url = https://shopee.vn/product/1063512412/22353005341?gsht=sjFxkDeGHTM5gwwS
 
 [entershopping.vn]
 match = 3.4%%
