--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-02 06:53:32
+lastsearch = 2024-08-02 14:46:52
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -87,9 +87,9 @@ title = Cách tăng chiều cao ở tuổi 12 đơn giản, dễ dàng ngay tạ
 url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html
 
 [vietstock.vn]
-match = -231.2%%
-title = Phân tích kỹ thuật phiên chiều 10/07: Thị trường diễn biến ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1007-thi-truong-dien-bien-giang-co-585-1206162.htm
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 02/08: Tâm lý bi quan bao ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0208-tam-ly-bi-quan-bao-trum-thi-truong-585-1215921.htm
 
 [www.vinmec.com]
 match = -193.8%%
