--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-08-02 11:44:28
+lastsearch = 2024-08-02 14:57:10
 
 [demxanh.com]
 match = -135.3%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopdu482Mt8CM84tRzpQ_CTj--h1JRe6tr9WQkPxzZMAsCvmnVEw
+url = https://demxanh.com/chieu-truc.html
 
 [dem24h.vn]
 match = -29.4%%
