CI images update

--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-02 10:53:57
+lastsearch = 2024-08-02 15:20:37
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -485,4 +485,9 @@ url = https://www.vfsglobal.com/one-pager/germany/vietnam/vietnamese/
 match = -26.1%%
 title = Khởi tố, bắt tạm giam nữ Công chứng viên
 url = https://xaydungchinhsach.chinhphu.vn/khoi-to-bat-tam-giam-nu-cong-chung-vien-119240731132052824.htm
+
+[cdsphagiang.edu.vn]
+match = -30.4%%
+title = Nơi cung cấp chiếu tre trúc tại tỉnh An Giang
+url = https://cdsphagiang.edu.vn/chieu-an-giang-a38538.html
 
