--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-08-02 12:41:58
+lastsearch = 2024-08-02 15:28:14
 
 [www.lazada.vn]
 match = -212.5%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -6.2%%
-title = Huda Beauty Lip Stain
-url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
+match = -237.5%%
+title = #1 long lasting lip liner from @Huda Beauty in Terracotta I ...
+url = https://www.tiktok.com/@bilintinamakeup/video/7368236160637783338
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
@@ -42,9 +42,9 @@ title = Categories - MTL Novel Portuguese
 url = https://pt.mtlnovel.com/categories/
 
 [www.diepxuan.com]
-match = -150.0%%
-title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-bong.html?p=2
+match = -156.2%%
+title = Nệm lò xo Everon Pocket 150x190x25 - Điệp Xuân
+url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-150x190x25.html
 
 [diepxuan.com]
 match = -81.2%%
@@ -119,7 +119,7 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/
+url = https://www.facebook.com/diepxuanco/?locale=lv_LV
 
 [extenzee.com]
 match = -262.5%%
