--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-02 15:00:18
+lastsearch = 2024-08-02 15:32:13
 
 [demxanh.com]
-match = 34.5%%
-title = Chiếu điều hòa cao su non đa sắc tím than
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
+match = 24.1%%
+title = Chiếu điều hòa cao su non đa sắc xám hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
 
 [leflair.com]
 match = 6.9%%
@@ -34,7 +34,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [shopee.vn]
 match = -20.7%%
 title = chiếu điều hòa cao su non tencel latex 5D mềm mịn mướt ...
-url = https://shopee.vn/product/1063512412/22353005341?gsht=sjFxkDeGHTM5gwwS
+url = https://shopee.vn/chiếu-điều-hòa-cao-su-non-tencel-latex-5D-mềm-mịn-mướt-mát-size-160x200-180x200-i.1063512412.22353005341
 
 [entershopping.vn]
 match = 3.4%%
