--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-02 11:39:37
+lastsearch = 2024-08-02 15:30:35
 
 [shopee.vn]
-match = -24.0%%
-title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [meoi.com.vn]
 match = 24.0%%
@@ -37,14 +37,14 @@ title = 14/06 VỀ HÀNG. CHIẾU ĐIỀU HOÀ MÁT LẠNH COCO 1.6M X ...
 url = https://phatdatbinhthoi.com.vn/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-162m-194k-182m-204k-11506.htm
 
 [demxanh.com]
-match = 12.0%%
-title = Chiếu điều hòa cao su non đa sắc tím than
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
+match = -28.0%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
-match = 16.0%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = -20.0%%
+title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
 
 [goni.vn]
 match = 8.0%%
