--- a/images/nem-sieu-nhe-5f-16/config.ini
+++ b/images/nem-sieu-nhe-5f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html
 lastopen = 2024-06-10 00:33:56
 
 [search]
-lastsearch = 2024-08-02 14:54:44
+lastsearch = 2024-08-02 15:27:30
 
 [shopee.vn]
 match = -161.1%%
@@ -52,9 +52,9 @@ title = Điệp Xuân Nệm siêu nhẹ 5F 16
 url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html
 
 [m.facebook.com]
-match = 0.0%%
-title = Hà Nội Riviu - Riviu.vn
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1459370101393388/
+match = -166.7%%
+title = Hà Nội Riviu - Riviu.vn | mọi người phải tới đây ăn đi vì
+url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/mọi-người-phải-tới-đây-ăn-đi-vì-thật-sự-là-cơm-cà-ri-ở-đây-siêu-ngonnn-chúng-mìn/1459371144726617/
 
 [www.tiktok.com]
 match = -194.4%%
@@ -162,9 +162,9 @@ title = MẠNH TIẾN GIÁ SỈ - CHUYÊN PHÂN PHỐI CUNG CẤP CÁC ...
 url = https://manhtiengiasi.com/
 
 [www.sendo.vn]
-match = -127.8%%
-title = Nệm 1.6 X 2M Siêu Sang, Giá Cực Tốt, Tiết Kiệm Chi Phí
-url = https://www.sendo.vn/nem-16-x-2m.htm
+match = -77.8%%
+title = Nệm 1M4 Siêu Chất, Giá Mê Ly, Với Nhiều Ưu Đãi
+url = https://www.sendo.vn/nem-1m4.htm
 
 [chandrapgiasi.vn]
 match = -77.8%%
