--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-02 02:24:45
+lastsearch = 2024-08-02 15:27:09
 
 [www.lazada.vn]
 match = -94.4%%
@@ -12,9 +12,9 @@ title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
-match = -72.2%%
-title = Nem cua bể nhà em bán siêu ngon luôn mn nha
-url = https://m.facebook.com/groups/213134222458659/posts/1917229278715803/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [www.instagram.com]
 match = -50.0%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -150.0%%
-title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
-url = https://www.facebook.com/sieuthinem267/
+match = 5.6%%
+title = Nem Chua Sạch Thắng Tuyến
+url = https://www.facebook.com/NemChuaSachThangTuyen/posts/đầu-tuần-khách-ưu-ái-đặt-nhiều-nem-chua-quá-nhà-em-có-sẵn-nem-ăn-được-luôn-nhé-c/826753272575097/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -155.6%%
-title = Nem nướng Ninh Hoà Dì Út #AnCungTikTok #couplecomedy ...
-url = https://www.tiktok.com/@khalinh.ne/video/7357680006492851474
+match = -188.9%%
+title = let me cater to you with these easy nem nuong spring rolls ...
+url = https://www.tiktok.com/@marylantran/video/7303621361979755822?lang=en
 
 [vi.wikipedia.org]
 match = -27.8%%
