--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-02 13:31:51
+lastsearch = 2024-08-02 15:25:06
 
 [www.reddit.com]
 match = -82.6%%
@@ -12,9 +12,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -72.7%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -58.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [liquipedia.net]
 match = 0.0%%
@@ -263,8 +263,8 @@ url = https://www.archives.gov/files/declassification/iscap/pdf/2011-064-doc49.p
 
 [cryptonews.com]
 match = -108.7%%
-title = South Korean Police Arrest 70 in 'Crypto-powered Drugs ...
-url = https://cryptonews.com/news/south-korean-police-arrest-70-in-raid-on-crypto-powered-drug-dealers.htm
+title = South Korean Lawmakers Consider 'Abolishing' Crypto Tax ...
+url = https://cryptonews.com/news/south-korean-lawmakers-consider-abolishing-crypto-tax-law.htm
 
 [www.koreanwar2.org]
 match = -30.4%%
