--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-02 09:45:23
+lastsearch = 2024-08-02 16:40:52
 
 [demre.com.vn]
 match = 61.1%%
@@ -27,9 +27,9 @@ title = Chiếu nhựa - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán M
 url = https://chieucoi.com.vn/danh-muc/chieu-nhua/
 
 [www.lazada.vn]
-match = 44.0%%
-title = Chiếu Nhựa đôi Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/chieu-nhua-doi/
+match = 36.0%%
+title = Chiếu Nhựa Gấp đôi Giá Tốt T04/2024
+url = https://www.lazada.vn/tag/chieu-nhua-gap-doi/?page=2
 
 [www.diepxuan.com]
 match = 20.0%%
@@ -37,9 +37,9 @@ title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [demxanh.com]
-match = -28.0%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+match = -20.0%%
+title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
+url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 
 [shopee.vn]
 match = 36.0%%
