--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-02 02:28:09
+lastsearch = 2024-08-02 16:41:34
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Giá Bao Nhiêu?
 url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.facebook.com]
-match = 0.0%%
-title = Fujifilm Manufacturing Hải Phòng
-url = https://www.facebook.com/story.php/?story_fbid=899810658856646&id=100064831595772
+match = -12.5%%
+title = TTMS SORA gardens SC | Thu Dau Mot
+url = https://www.facebook.com/SORAgardensSC/
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -72,9 +72,9 @@ title = IVECO DAILY PLUS – MẪU XE MINI BUS CAO CẤP 16
 url = https://thacoansuonghcm.com/iveco-daily-plus-mau-xe-mini-bus-cao-cap-16-19-cho-1438691.html
 
 [thuvienphapluat.vn]
-match = -50.0%%
-title = Thông tư 19/2016/TT-NHNN hoạt động thẻ ngân hàng
-url = https://thuvienphapluat.vn/van-ban/Tien-te-Ngan-hang/Thong-tu-19-2016-TT-NHNN-hoat-dong-the-ngan-hang-316056.aspx
+match = -58.3%%
+title = CÔNG TY CỔ PHẦN CƠ KHÍ 19-8 - Mã số thuế 2500161619
+url = https://thuvienphapluat.vn/ma-so-thue/cong-ty-co-phan-co-khi-198-mst-2500161619.html
 
 [baocaobang.vn]
 match = -95.8%%
