--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-02 12:42:59
+lastsearch = 2024-08-02 16:40:29
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilnTBz_5E&sig=ACfU3U0KBveGRhf9KNLHHsXOzPopLFFt-w&hl=en&sa=X&ved=2ahUKEwj3-tbmzNWHAxUVm4kEHTVBIv4Q6AF6BAgaEAM
+match = -194.1%%
+title = A Complete Greek and English Lexicon of the Poems of Homer ...
+url = https://books.google.com/books?id=ps7TAAAAMAAJ&pg=PA104&lpg=PA104&dq=man+in+hoa+dep+16&source=bl&ots=K8mJSbbgpc&sig=ACfU3U250Z3XzGWCLXwIbokm3XJuDqvJwg&hl=en&sa=X&ved=2ahUKEwjJ-aPxgdaHAxVXD1kFHV5IMBAQ6AF6BAgYEAM
 
 [tax.vermont.gov]
 match = -29.4%%
