--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-02 16:15:12
+lastsearch = 2024-08-02 16:42:56
 
 [shopee.vn]
-match = -75.0%%
-title = Thảm lau chân chùi chân chống trượt thấm nước nhà bếp ...
-url = https://shopee.vn/Thảm-lau-chân-chùi-chân-chống-trượt-thấm-nước-nhà-bếp-nhà-tắm-phòng-khách-giẻ-lau-chân-đế-chống-trượt-i.149656288.20753269043
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -17,9 +17,9 @@ title = Thảm lau chân lông xù hình học thấm nước, chống trượt 
 url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
 
 [tiki.vn]
-match = -70.8%%
-title = Thảm Lau Chân Nỉ - Chống Trượt, Siêu Thấm Hút Đế Cao ...
-url = https://tiki.vn/tham-lau-chan-ni-chong-truot-sieu-tham-hut-de-cao-su-cao-cap-long-min-day-dan-40x60cm-hang-loai-1-p205153225.html?spid=205153429
+match = -54.2%%
+title = Thảm lau chân, siêu thấm cao cấp room mat 40x60 ( Đồ ...
+url = https://tiki.vn/tham-lau-chan-sieu-tham-cao-cap-room-mat-40x60-do-gia-dung-nhu-y-p181147569.html
 
 [www.thamminhquang.vn]
 match = 33.3%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -62.5%%
-title = Thảm chân logo hình bàn chân, Thảm chùi chân lông xù ...
-url = https://www.lazada.vn/products/tham-chan-logo-hinh-ban-chan-tham-chui-chan-long-xu-cao-cap-tham-lau-chan-sieu-tham-nuoc-tham-chui-chan-chong-tron-truot-trang-tri-nha-cua-phong-ngu-phong-khach-kich-thuoc-40x60-cm-i1788111707.html
+match = -83.3%%
+title = Thảm lau chùi chân chống trơn trượt sợi len siêu mịn kích ...
+url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html
 
 [megahomevietnam.com]
 match = 20.0%%
@@ -83,8 +83,8 @@ url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.h
 
 [sieuthinguyenkim.com]
 match = -62.5%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
-url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
+title = Thảm lông mềm trải chân giường, lót ghế ngồi nhiều size 40x60
+url = https://sieuthinguyenkim.com/tham-long-mem-trai-chan-giuong-nti177943446.html
 
 [huyenikea.com]
 match = -4.2%%
