--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-02 15:33:34
+lastsearch = 2024-08-02 16:28:50
 
 [www.diepxuan.com]
 match = -131.2%%
 title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html?srsltid=AfmBOoqadKzSIxH0zZlE6ko9bmPkqyTk7SLXLl3ZWGecA4IXBwjVFvyD
 
 [demxanh.com]
 match = -181.2%%
