CI images update

--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-02 16:29:30
 [demxanh.com]
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOooxnM6AVdM0wt5BikX1JRtNypLSsDPbVAwg8njhUkSeWFVIOfeP
 
 [tiki.vn]
 match = -117.6%%
