--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-01 20:46:24
+lastsearch = 2024-08-02 16:50:00
 
 [shopee.vn]
 match = -76.2%%
@@ -54,7 +54,7 @@ url = https://lanhadecor.vn/san-pham/giuong-boc-nem-lnd-16/
 [ru9.vn]
 match = -81.0%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoriBdjwnj7U6LUGPxlu9q_6243nRUguPYmSRRRPEVHwrvhZ2oAn
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [edena.vn]
 match = -38.1%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOoqVt-zv-sOQBYbNrLe4DcbQzpryU2mjyh4bcUajHzo7nz-h60Ao
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem
 
 [giuongxep.com]
 match = -57.1%%
@@ -114,7 +114,7 @@ url = https://thangnhomsaigon.com/giuong-xep/
 [noithatduongdong.com]
 match = 23.8%%
 title = Giường sắt 2 tầng -GT16
-url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16?srsltid=AfmBOooFFvckyJs9W3JHhQFdpouAbDej_A4DAu4_uHXL0RPGIeu-M4hu
+url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16
 
 [beyours.vn]
 match = 0.0%%
