CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-02 15:33:56
+lastsearch = 2024-08-02 17:28:43
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -325,4 +325,24 @@ url = https://petrovietnam.petrotimes.vn/pvcfc-runners-to-chuc-huan-luyen-chay-b
 match = -150.0%%
 title = Lạc vào vườn thú safari thu nhỏ giữa lòng Tây Đô
 url = https://canthotourism.vn/vi/detailnews/?t=lac-vao-vuon-thu-safari-thu-nho-giua-long-tay-do&id=nspirituality_124
+
+[vnvc.vn]
+match = -206.2%%
+title = 36 điểm chích ngừa 6 trong 1 ở TPHCM cao cấp, uy tín và ...
+url = https://vnvc.vn/chich-ngua-6-trong-1-o-tphcm/
+
+[vksndtc.gov.vn]
+match = -162.5%%
+title = Tin hoạt động VKSND địa phương Lạng Sơn – Quảng Ninh
+url = https://vksndtc.gov.vn/tin-hoat-dong-vksnd-dia-phuong/tin-hoat-dong-vksnd-dia-phuong-lang-son--quang-nin-d3-t12367.html
+
+[flytoskycharity.vn]
+match = -218.8%%
+title = Danh bạ các tổ chức, mái ấm tình thương tại thành phố Hồ ...
+url = https://flytoskycharity.vn/tin-tuc/ky-nang-tinh-nguyen/danh-ba-cac-to-chuc-mai-am-tinh-thuong-tai-thanh-pho-ho-chi-minh-1117.html
+
+[baocaovien.vn]
+match = -181.2%%
+title = Bốc thăm vòng 1 V-League 2024-2025: Hải Phòng "đại ...
+url = https://baocaovien.vn/tin-tuc/boc-tham-vong-1-v-league-2024-2025-hai-phong-dai-chien-cong-an-ha-noi/145219.html
 
