--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-08-02 11:56:17
+lastsearch = 2024-08-02 17:17:07
 
 [www.tiktok.com]
 match = -58.3%%
@@ -52,9 +52,9 @@ title = Toyota 22RE Engine Replacement (Part 2)
 url = https://www.youtube.com/watch?v=hZRwijhMTH0
 
 [books.google.com]
-match = -54.2%%
-title = Neuigkeiten Brünn - Page 3 - Google Books Result
-url = https://books.google.com/books?id=Hw9aTWJo3B0C&pg=RA5-PA3&lpg=RA5-PA3&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=61nEIVSh32&sig=ACfU3U3ciUR6z_fFGp1bKBb8TInE1pADrA&hl=en&sa=X&ved=2ahUKEwjY_emJ89SHAxWgJTQIHSRPLc0Q6AF6BAgaEAM
+match = -58.3%%
+title = The Art Journal - Volume 61 - Google Books Result
+url = https://books.google.com/books?id=oxzRSm8jdgMC&pg=PT39&lpg=PT39&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=0TmCI-X9Rs&sig=ACfU3U0dFVztkCYwubuUMpv6KJe8QMZBqQ&hl=en&sa=X&ved=2ahUKEwiowLuJitaHAxWnFmIAHbhxA48Q6AF6BAgXEAM
 
 [www.kvaser.cn]
 match = 9.1%%
@@ -247,9 +247,9 @@ title = Advertising|1879-01-29|The Western Mail - Welsh Newspapers
 url = https://newspapers.library.wales/view/4474877/4474881
 
 [www.kentuckynewera.com]
-match = 4.5%%
-title = Library Notes | Living
-url = https://www.kentuckynewera.com/cadiz_record/living/article_cc732432-43d3-5477-bde9-6789b5cef320.html
+match = 4.2%%
+title = Library Notes | Cadiz Record
+url = https://www.kentuckynewera.com/cadiz_record/article_00989dbc-6c0a-501c-9b45-b4cfc42d217f.html
 
 [en.wikipedia.org]
 match = 0.0%%
