--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-02 16:44:03
+lastsearch = 2024-08-02 17:16:46
 
 [www.lazada.vn]
 match = -193.3%%
 title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOooWiabUY1tikXotd5UGS0lEXHaG7QBfbC-Zv56QintKOiJ_lAnK
 
 [shopee.vn]
 match = -140.0%%
@@ -19,17 +19,17 @@ url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-v
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoqraYLme4mqP3Hrx5vJ9u1WsTnNUzNKRCMJhBKSTQ97F-WRwttT
 
 [chus.vn]
 match = -173.3%%
 title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
-url = https://chus.vn/vo-goi-vuong-hmong/
+url = https://chus.vn/vo-goi-vuong-hmong/?srsltid=AfmBOoootRXWX5vDnB5spvMG36WqtTLj5dhoQ73H0n-GgSERIFnZ9Nol
 
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOopeXNk7MCB62CyhQAbWbIU1iHuUlw6qw79b4q29PehBT1kA4i8J
 
 [lepetit.com.vn]
 match = -173.3%%
@@ -92,9 +92,9 @@ title = Gối Vuông Tựa | Khonemtonghop.com
 url = https://khonemtonghop.com/goi-vuong-tua/
 
 [thocamtraby.com]
-match = -33.3%%
-title = set 3 vỏ gối vuông trơn màu cao cấp
-url = https://thocamtraby.com/product/details/set-3-vo-goi-vuong-tron-mau-cao-cap-VOGOI011
+match = -53.3%%
+title = set 3 vỏ gối vuông cổ điển chất nhung
+url = https://thocamtraby.com/product/details/set-3-vo-goi-vuong-co-dien-chat-nhung-VOGOI010
 
 [cobanmart.com]
 match = -106.7%%
