--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-02 12:27:51
+lastsearch = 2024-08-02 17:28:01
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = -25.9%%
+title = chăn lông cừu 4kids thái lan giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
 
 [www.lazada.vn]
 match = -11.1%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=Y9mBdxK-DPg
 [www.diepxuan.com]
 match = 22.2%%
 title = Chăn tuyết Thái Lan 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html?srsltid=AfmBOoqMoTUvtT_H3UYVy5UldrSwOE1aZbmI3JA8ZtbLSDRpS_rT6h8I
+url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html
 
 [sanhangre.net]
 match = -33.3%%
@@ -124,7 +124,7 @@ url = https://stockbiz.vn/tin-tuc/shark-do-lien-nuoc-den-tan-cung-la-thac-do-ngu
 [www.facebook.com]
 match = -33.3%%
 title = Chăn 3kg 4 kg 5kg Thành... - Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/permalink.php/?story_fbid=436093618729320&id=100069860554625
+url = https://www.facebook.com/story.php/?story_fbid=436093618729320&id=100069860554625
 
 [tamanhhospital.vn]
 match = -66.7%%
