--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-02 15:27:51
+lastsearch = 2024-08-02 17:26:16
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -106.2%%
-title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
-url = https://www.youtube.com/watch?v=D5B7MtNy_kM
+match = -206.2%%
+title = Mô hình nuôi gà vi sinh: Thịt thơm ngon, gà sạch bệnh | VTC16
+url = https://www.youtube.com/watch?v=U8FJ7FRihYQ
 
 [books.google.com]
 match = -81.2%%
