--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-02 16:36:42
+lastsearch = 2024-08-02 17:19:11
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 [demxanh.com]
 match = -87.0%%
 title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html?srsltid=AfmBOopA3vtZVT6SUJY_5gyM2qnMCYwZdr5NDOiGU5UAEUP3LLzkx9mo
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -482,12 +482,17 @@ title = Thông tin Visa
 url = https://www.vfsglobal.com/one-pager/germany/vietnam/vietnamese/
 
 [xaydungchinhsach.chinhphu.vn]
-match = -26.1%%
-title = Khởi tố, bắt tạm giam nữ Công chứng viên
-url = https://xaydungchinhsach.chinhphu.vn/khoi-to-bat-tam-giam-nu-cong-chung-vien-119240731132052824.htm
+match = -100.0%%
+title = Bắt tạm giam Giám đốc Sở; khởi tố Giám đốc doanh nghiệp
+url = https://xaydungchinhsach.chinhphu.vn/bat-tam-giam-giam-doc-so-khoi-to-giam-doc-doanh-nghiep-119240802151917368.htm
 
 [cdsphagiang.edu.vn]
 match = -30.4%%
 title = Nơi cung cấp chiếu tre trúc tại tỉnh An Giang
 url = https://cdsphagiang.edu.vn/chieu-an-giang-a38538.html
+
+[doanthanhnien.vn]
+match = -100.0%%
+title = Trao quyết định công nhận chức danh Bí thư Thành đoàn ...
+url = https://doanthanhnien.vn/tin-tuc/nhan-su-moi/trao-quyet-dinh-cong-nhan-chuc-danh-bi-thu-thanh-doan-hai-phong
 
