--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-08-02 10:53:11
+lastsearch = 2024-08-02 17:15:00
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOop4LxtJMfqCE3b8egtcLQqmd5sVb2oAC3xJlm8yogqqco8UtX9g
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
 match = -105.0%%
@@ -62,9 +62,9 @@ title = Thảm trải chân giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải chân giường
 
 [noithathoaphat360.com]
-match = -60.0%%
-title = Giường ngủ GN301-18 - Noi That Hoa Phat
-url = http://noithathoaphat360.com/giuong-ngu-gn30118-p7654247.html
+match = -110.0%%
+title = Combo Bộ giường tủ phòng ngủ 401-18 - Noi That Hoa Phat
+url = https://noithathoaphat360.com/combo-bo-giuong-tu-phong-ngu-40118-p35700397.html
 
 [noithathofaco.net]
 match = -105.0%%
@@ -74,7 +74,7 @@ url = https://noithathofaco.net/san-pham/bo-giuong-tu-trang-nhap-khau-hfc-bgt-r0
 [everonvn.com.vn]
 match = -75.0%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOopBdwxf1VKpRuB9agIKlYgjDPZIt92pkCf8vgurlNZhH8I6F5PU
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatdaithanh.vn]
 match = -35.0%%
