--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-02 13:20:05
+lastsearch = 2024-08-02 17:23:54
 
 [xoptraisan.info]
-match = 17.6%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -64.7%%
+title = Thảm nỉ đế cao su không răng Âu Lạc 50×50
+url = https://xoptraisan.info/tham-ni-50x50-au-lac-de-cao-su
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = thảm nỉ xốp gỗ 60
 url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 
 [thamaulac.com.vn]
-match = -29.4%%
-title = Thảm nỉ ghép 60x60cm Kẻ đỏ, kẻ ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-ke-do-ghi
+match = -41.2%%
+title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
+url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
 
 [vatlieulotsan.com]
 match = -76.5%%
@@ -187,9 +187,9 @@ title = Lhagang Choyu Wordlist with the Thamkhas Dialect of ...
 url = https://core.ac.uk/download/pdf/154886317.pdf
 
 [m.facebook.com]
-match = -129.4%%
-title = THẢM XỐP TRẢI SÀN - Xốp ghép vân gỗ cao cấp Tường ...
-url = https://m.facebook.com/xoplotsan/photos/xốp-ghép-vân-gỗ-cao-cấp-tường-lâm-bịch-10-tấm-mỗi-tấm-kt-60-x-60cm-khoa/724213074350870/
+match = -158.8%%
+title = THẢM XỐP TRẢI SÀN - Thảm xốp nỉ kẻ Âu Lạc bịch 10 tấm ...
+url = https://m.facebook.com/xoplotsan/photos/thảm-xốp-nỉ-kẻ-âu-lạc-bịch-10-tấm-mỗi-tấm-kích-thước-60-x-60cm-khoản/724213377684173/
 
 [citydocs.cityoforange.org]
 match = -194.1%%
