CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-02 17:26:16
+lastsearch = 2024-08-02 17:39:06
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Mô hình nuôi gà vi sinh: Thịt thơm ngon, gà sạch bệnh | VTC1
 url = https://www.youtube.com/watch?v=U8FJ7FRihYQ
 
 [books.google.com]
-match = -81.2%%
-title = Tam tu kinh: - Google Books Result
-url = https://books.google.com/books?id=6LwwAQAAMAAJ&pg=PP378&lpg=PP378&dq=chieu+lac+soc+16&source=bl&ots=hpvzKpy4K4&sig=ACfU3U0M1Fm7GsJmSJak6S3P4r07WEjOBA&hl=en&sa=X&ved=2ahUKEwjyqaWit9SHAxUXl-4BHXLINCEQ6AF6BAgdEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=rq3aAAAAMAAJ&pg=RA6-PA66&lpg=RA6-PA66&dq=chieu+lac+soc+16&source=bl&ots=W7J7xV57WP&sig=ACfU3U2W_lP9CyyYZDMZj0TpTYFheYEInQ&hl=en&sa=X&ved=2ahUKEwiclr_-jtaHAxXHM9AFHWq0DJgQ6AF6BAgoEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -695,4 +695,9 @@ url = https://baotintuc.vn/kinh-te/tam-ly-lac-quan-bao-trum-cac-thi-truong-chau-
 match = -206.2%%
 title = Cô gái 16 tuổi mất trí nhớ đi lạc từ Sóc Trăng, được nhân ...
 url = https://www.dkn.tv/khac/co-gai-16-tuoi-mat-tri-nho-di-lac-tu-soc-trang-duoc-nhan-vien-benh-vien-o-sai-gon-cham-soc.html
+
+[winz.vn]
+match = 0.0%%
+title = 
+url = https://winz.vn/cach-chon-do-size-vong-tay-khi-mua-online
 
