--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-02 14:56:49
+lastsearch = 2024-08-02 17:41:09
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -12,19 +12,19 @@ title = Bộ ga chun LIVING - LV18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18
 
 [shopee.vn]
-match = -114.3%%
-title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
+match = -104.8%%
+title = Bộ Chăn Ga Gối Trải Giường Poly Cotton bo chun miễn phí ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Trải-Giường-Poly-Cotton-bo-chun-miễn-phí-Ga-trải-giường-BÒ-XÁM-i.600110082.21919470309
 
 [changagoidemsonghong.com]
-match = -14.3%%
-title = Chăn ga gối Home mã H17-048 Sale 30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
+match = -71.4%%
+title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
+url = https://changagoidemsonghong.com/chan-ga-goi-micro-dn1805
 
 [demsonghonghanoi.com]
 match = -14.3%%
