--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-02 15:22:40
+lastsearch = 2024-08-02 17:45:15
 
 [chieutrucsaigon.com]
 match = 0.0%%
-title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
-url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [chieutrelanlan.com]
 match = -76.2%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = 47.6%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -109.5%%
+title = chiếu tre 1,4*1,9m hạt nâu không viền hàng Việt Nam siêu rẻ
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-1-4*1-9m-hạt-nâu-không-viền-hàng-Việt-Nam-siêu-rẻ-i.15000357.2176483881
 
 [www.lazada.vn]
 match = -66.7%%
