--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-02 12:31:48
+lastsearch = 2024-08-02 17:40:10
 
 [www.gov.uk]
 match = -200.0%%
@@ -1165,4 +1165,9 @@ url = https://www.legis.state.pa.us/cfdocs/legis/home/member_information/mbrList
 match = -120.0%%
 title = Welcome to F&M Bank | Farmers & Merchants
 url = https://www.fm.bank/
+
+[immigration.gov.bb]
+match = -73.3%%
+title = How do I apply for a passport?
+url = https://immigration.gov.bb/pages/passport.aspx
 
