--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-02 15:37:22
+lastsearch = 2024-08-02 17:41:28
 
 [www.everonvn.vn]
 match = 69.2%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = -53.8%%
-title = Khám phá bí quyết tái tạo mỗi ngày cùng nệm Everon
-url = https://nemhana.com/nem-everon/
+match = 69.2%%
+title = Nệm lò xo túi Everon Pocket Pops
+url = https://nemhana.com/nem-lo-xo-tui-everon-pocket-pops/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
@@ -52,9 +52,9 @@ title = Nệm lò xo Everon Pocket 18
 url = https://www.everonqb.com/nem-lo-xo-everon-pocket-18.html
 
 [tiki.vn]
-match = 50.0%%
-title = Nệm lò xo túi Everon Pocket Pops EDLX
-url = https://tiki.vn/nem-lo-xo-tui-everon-pocket-pops-edlx-p193099163.html?spid=193099165
+match = 34.6%%
+title = Mua Nệm lò xo túi Everon Pocket Pops EDLX
+url = https://tiki.vn/nem-lo-xo-tui-everon-pocket-pops-edlx-p193099163.html?spid=193099165/
 
 [nemgiakho.com]
 match = 50.0%%
@@ -62,8 +62,8 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -19.2%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
+match = -34.6%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
 url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
