--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-02 15:25:25
+lastsearch = 2024-08-02 17:38:24
 
 [erado.vn]
-match = 0.0%%
-title = Giường ngủ da hạng sang mã 14
-url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
+match = 5.0%%
+title = Giường da hạng sang mã DV14
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html?srsltid=AfmBOors-X9yDnjQijGvk2UqP3b-316eUsOfpNe6fEUvEnL57zDDt2LS
 
 [shopee.vn]
 match = -105.0%%
@@ -134,7 +134,7 @@ url = https://inoacliving.vn/blog/kich-thuoc-nem-tieu-chuan/
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 14 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html?srsltid=AfmBOoq66PbZx2aw2NBupiqG6uTa8derzjNPK-dBrHUWbuDR-1nsbxTM
 
 [sofaphongkhach.vn]
 match = -40.0%%
