--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-02 13:25:44
+lastsearch = 2024-08-02 17:37:22
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -15.0%%
-title = Abraham Palmer - UCSD Profiles
-url = https://profiles.ucsd.edu/abraham.palmer
+match = -5.0%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,14 +52,14 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -6.2%%
-title = Spencer Behr, MD
-url = https://profiles.ucsf.edu/spencer.behr
+match = -5.0%%
+title = Christopher Dvorak, MD
+url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+title = Uncoupling Proteins: Role in Insulin Resistance and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
 
 [profiles.ucla.edu]
 match = 0.0%%
@@ -152,9 +152,9 @@ title = Theories of the Policy Process
 url = http://ruby.fgcu.edu/courses/twimberley/EVR2861/theorypolprocess.pdf
 
 [www.dhcs.ca.gov]
-match = -155.0%%
-title = List-of-Successfully-Registered-Entities-and-Physicians
-url = https://www.dhcs.ca.gov/Documents/List-of-Successfully-Registered-Entities-and-Physicians.xlsx
+match = -30.0%%
+title = CPE-Pending-QP-list-6-17-2024
+url = https://www.dhcs.ca.gov/services/medi-cal/eligibility/Documents/CPE-Pending-QP-list-6-17-2024.xlsx
 
 [www.cigna.com]
 match = -50.0%%
@@ -199,7 +199,7 @@ url = https://www.ljmu.ac.uk/about-us/staff-profiles/faculty-of-engineering-and-
 [cps-vo.org]
 match = -140.0%%
 title = Registrants | Cyber-Physical Systems Virtual Organization
-url = https://cps-vo.org/group/satc-pimtg22/registrants
+url = https://cps-vo.org/node/57775
 
 [www.va.gov]
 match = -21.4%%
