--- a/images/vo-goi-dreamland-50x70-tr/config.ini
+++ b/images/vo-goi-dreamland-50x70-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tr.html
 lastopen = 2024-06-07 00:26:33
 
 [search]
-lastsearch = 2024-08-02 14:22:31
+lastsearch = 2024-08-02 17:46:15
 
 [furlife.vn]
 match = 70.8%%
@@ -34,7 +34,7 @@ url = https://mgaleg.maryland.gov/mgawebsite/Committees/Media/false?cmte=b&t&ys=
 [numerique.banq.qc.ca]
 match = 4.0%%
 title = La presse, Dernière édition
-url = https://numerique.banq.qc.ca/patrimoine/details/52327/2756383
+url = https://numerique.banq.qc.ca/patrimoine/details/52327/2755790
 
 [www.poggibonsifacile.it]
 match = -83.3%%
@@ -42,9 +42,9 @@ title = tvpoggibonsi
 url = http://www.poggibonsifacile.it/servicepage.php?titolo=tvpoggibonsi&link=xn--b1af6ak5a2c.xn--p1ai/43561893zwfe43a
 
 [www.museum.ru]
-match = -104.0%%
-title = Gaurav bhardwaj rti 2014 Cartelera cubavision Hegel schule ...
-url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=https://xn--b1awbidf.xn--p1ai/kXLoAJ9fe43vo
+match = -108.0%%
+title = bruno manser freundin: Mahadbt portal yojana Voldsom kritikk ...
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://dwtao.ru/1ikDfsafe
 
 [rerecord.library.columbia.edu]
 match = -17.6%%
@@ -57,9 +57,9 @@ title = Bank millennium tychy Coolum acupuncture Cd kaserne ...
 url = http://library.ap.tu.ac.th/dublin.linkout.php?url=https://xn--c1adcknledbd9a0b2j.xn--p1ai/4397165fe4fe43y
 
 [archive.org]
-match = -64.0%%
-title = Full text of "The Billboard, Volume 20 (July 4 1908
-url = https://archive.org/stream/TheBillboardVolume20july41908-Sept261908/TheBillboardVolume20july41908-Sept261908_djvu.txt
+match = -24.0%%
+title = Full text of "The billboard (Mar 1918)"
+url = https://archive.org/stream/billboard30-1918-03/billboard30-1918-03_djvu.txt
 
 [www.sunrockice.com]
 match = -76.0%%
