--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-02 17:16:46
+lastsearch = 2024-08-02 17:49:02
 
 [www.lazada.vn]
 match = -193.3%%
 title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOooWiabUY1tikXotd5UGS0lEXHaG7QBfbC-Zv56QintKOiJ_lAnK
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
 
 [shopee.vn]
 match = -140.0%%
@@ -19,17 +19,17 @@ url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-v
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoqraYLme4mqP3Hrx5vJ9u1WsTnNUzNKRCMJhBKSTQ97F-WRwttT
+url = https://jysk.vn/vo-goi-trang-tri
 
 [chus.vn]
 match = -173.3%%
 title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
-url = https://chus.vn/vo-goi-vuong-hmong/?srsltid=AfmBOoootRXWX5vDnB5spvMG36WqtTLj5dhoQ73H0n-GgSERIFnZ9Nol
+url = https://chus.vn/vo-goi-vuong-hmong/
 
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOopeXNk7MCB62CyhQAbWbIU1iHuUlw6qw79b4q29PehBT1kA4i8J
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [lepetit.com.vn]
 match = -173.3%%
