--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -184,7 +184,7 @@ url = https://www.premierleague.com/
 [books.google.com]
 match = -260.0%%
 title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPnwPAQOi&sig=ACfU3U0IMblt8hVm74VJW5-0dA0CJC73IA&hl=en&sa=X&ved=2ahUKEwix9MCj9tSHAxVlFzQIHehpBV8Q6AF6BAgcEAM
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPnwTCPLg&sig=ACfU3U0bqzRn2mgwIKJwG9dCgAgnDTb7Qg&hl=en&sa=X&ved=2ahUKEwi6mY-gktaHAxUBDTQIHei9BzkQ6AF6BAglEAM
 
 [www.nolo.com]
 match = 0.0%%
