--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-08-02 16:45:27
+lastsearch = 2024-08-02 17:50:11
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -47,9 +47,9 @@ title = REN 12 | Acupressure treatment, Acupuncture ...
 url = https://www.pinterest.com/pin/ren-12--501307002254190003/
 
 [yinyanghouse.com]
-match = -140.0%%
-title = UB 12 Acupuncture Point Theory
-url = https://yinyanghouse.com/theory/acupuncturepoints/ub12/
+match = -400.0%%
+title = Acupuncture Point Foundations Categorizations and Theory
+url = https://yinyanghouse.com/theory/acupuncturepoints/point_categories/
 
 [stramcenter.com]
 match = -230.0%%
@@ -107,9 +107,9 @@ title = Volleyball Announces 2024 Schedule
 url = https://purpleeagles.com/news/2024/6/25/womens-volleyball-volleyball-announces-2024-schedule.aspx
 
 [www.uscis.gov]
-match = -430.0%%
-title = I-589, Application for Asylum and for Withholding of Removal
-url = https://www.uscis.gov/sites/default/files/document/forms/i-589.pdf
+match = -230.0%%
+title = Chapter 7 - Child Status Protection Act
+url = https://www.uscis.gov/policy-manual/volume-7-part-a-chapter-7
 
 [www.ftb.ca.gov]
 match = -240.0%%
