--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-02 17:27:19
+lastsearch = 2024-08-02 17:44:43
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -27,9 +27,9 @@ title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối Elegance mã E18-10 chính hãng Sông Hồng
-url = https://changagoidemsonghong.com/chan-ga-goi-elegance-ma-e18-10
+match = 17.9%%
+title = Chăn ga gối Home mã H18-056 Sale 40%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h18-056
 
 [flexhouse.vn]
 match = -17.9%%
@@ -47,9 +47,9 @@ title = Chăn ga gối cao cấp Urban mã UC23-039
 url = https://songhong.info/chan-ga-goi-uc039
 
 [cuahangchangagoidem.com]
-match = -28.6%%
-title = 27 Bộ Chăn Ga Gối Đệm Phòng Cưới Sang Xịn Mịn Với Giá Tốt
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-phong-cuoi/
+match = -10.7%%
+title = 13 Bộ Chăn Ga Gối Đệm Cưới Màu Đỏ Đẹp, Ý Nghĩa 2023
+url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cuoi-mau-do/
 
 [goni.vn]
 match = 7.1%%
