--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-02 13:30:50
+lastsearch = 2024-08-02 17:59:13
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
 match = -35.7%%
-title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
+title = Một vài tác dụng phụ của chiếu đèn vàng da sơ sinh
+url = https://www.vinmec.com/vie/bai-viet/mot-vai-tac-dung-phu-cua-chieu-den-vang-da-so-sinh-vi
 
 [www.hotdeal.vn]
 match = -32.1%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = 17.9%%
-title = Việc làm spa uy tín - Facebook
-url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
+match = -14.3%%
+title = TUYỂN DỤNG SPA | 💝CENT BEAUTY TUYỂN NHÂN VIÊN
+url = https://m.facebook.com/groups/1239917846206149/posts/2469211189943469/
 
 [www.dkn.tv]
 match = -21.4%%
