--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-02 16:15:55
+lastsearch = 2024-08-02 17:51:36
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 [www.lazada.vn]
 match = -53.6%%
 title = Khay đá 18 viên nhựa Việt Nhật / Khay Đá Kim Cương 18 ...
-url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html
+url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html?srsltid=AfmBOoq3jKtGmL9AkFAegEpRx-AnWroSwx7Q8FUsLOx0Gyxx0j4lEhEy
 
 [www.instagram.com]
 match = -10.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = 11.1%%
-title = CHỢ ĐỒ CŨ ĐÀI LOAN
-url = https://www.facebook.com/groups/2967174413509226/
+match = -28.6%%
+title = Hội Người Việt Nam ở Chiayi ( Gia Nghĩa ) 嘉義
+url = https://www.facebook.com/groups/3429405850654432/posts/-đèn-led-phi-hành-gia-chiếu-thiên-hà-bầu-trời-sao-đổi-màu-dùng-cho-phòng-ngủ-và-/3696627640598917/
 
 [nhua66a.com]
 match = -17.9%%
@@ -154,7 +154,7 @@ url = https://issuu.com/huyhoangytn/docs/hs2a_hanh-trinh-thai-giao-280-ngay
 [m.facebook.com]
 match = 48.1%%
 title = Chợ đồ cũ ĐÀI LOAN (TAIWAN)
-url = https://m.facebook.com/groups/1438275593382390/posts/1626606887882592/
+url = https://m.facebook.com/groups/1438275593382390/posts/1632067434003204/
 
 [dabanhmat.com]
 match = -28.6%%
