--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-02 16:41:13
+lastsearch = 2024-08-02 17:57:29
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -12,14 +12,14 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = 21.1%%
-title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
-url = https://shopee.vn/GA-CHỐNG-THẤM-CAO-CẤP-2m-x-2m2-i.236450460.21023762253
+match = -84.2%%
+title = Ga chống thấm bọc nệm kích thước 2m*2m2 - Shopee
+url = https://shopee.vn/Ga-chống-thấm-bọc-nệm-kích-thước-2m*2m2-i.2157828.1211390382
 
 [www.lazada.vn]
-match = -115.8%%
-title = Bọc đệm chống thấm - Ga trải giường cao cấp 1M8 x 2m ...
-url = https://www.lazada.vn/products/ga-chong-tham-1m6-x-2m1m8-x-2m-mau-tron-nhieu-kich-thuoc-boc-dem-chong-tham-ga-trai-giuong-cao-cap-1m8-x-2m-ra-chong-tham-cho-be-tphcm-chong-tham-100-thoang-mat-ben-dep-hang-viet-nam-chat-luong-cao-i1402811647.html
+match = -136.8%%
+title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
+url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html
 
 [demgiare.net]
 match = 5.3%%
