--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-02 16:45:06
+lastsearch = 2024-08-02 17:55:24
 
 [www.mantubung.com]
 match = -100.0%%
@@ -62,9 +62,9 @@ title = Mùng Tự Bung Cho Bé 70cm x 90Cm
 url = https://mungchup.com/mung-thuyen-tu-bung-cho-be-67008.html
 
 [munghoangphat.com]
-match = -72.2%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+match = -44.4%%
+title = Mùng chụp tự bung trẻ em cao cấp HOÀNG PHÁT
+url = https://munghoangphat.com/mung-chup-tu-bung-tre-em-cao-cap.html
 
 [ichikobaby.com]
 match = -88.9%%
