--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-08-02 10:18:05
+lastsearch = 2024-08-02 17:44:21
 
 [www.sendo.vn]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-x
 [www.lazada.vn]
 match = -136.4%%
 title = BỘ 18 MIẾNG THẢM XỐP VÂN GỖ CAO CẤP
-url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html
+url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html?srsltid=AfmBOoqSCXp-GtNLhLkOTdE47YcZc7SIoBVhfOof4-pIJdQgnO9Z2ID0
 
 [tayphuthuan.com]
 match = -154.5%%
